TestSuite/PascalABCTests/errors/err0116.pas
uses err0114;

begin

end.